--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "grpc/grpc": "1.43.0",
-        "google/protobuf": "^v3.12.2",
-        "ext-grpc": "*"
+        "ext-curl": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
